fixed homepage on safari

--- a/src/components/home-card/index.css
+++ b/src/components/home-card/index.css
@@ -47,6 +47,10 @@
   text-decoration: underline;
 }
 
-.margin-bottom {
-  margin-bottom: 15px;
+.margin-top {
+  margin-top: 15px;
+}
+
+.display-inline {
+  display: inline;
 }
